# plank-monorepo

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
plankc/: .gitignore  CLAUDE.md  Cargo.toml  justfile
plankc/.agents/lint-ai/: LINT_RULES.md
plankc/.claude/skills/data-structure/: SKILL.md
plankc/.claude/skills/frontend-diagnostics/: SKILL.md
plankc/.claude/skills/parser-engineer/: SKILL.md
plankc/.opencode/agents/: code-qa.md
plankc/.pi/: settings.json
plankc/crates/plank-core/: Cargo.toml
plankc/crates/plank-core/src/: bigint.rs  chunked_arena.rs  const_print.rs  dense_index_map.rs  dense_index_set.rs  lib.rs  list_of_lists.rs  must_use.rs  source.rs  span.rs  vec_buf.rs
plankc/crates/plank-core/src/index_vec/: mod.rs
plankc/crates/plank-evm/: Cargo.toml
plankc/crates/plank-evm/src/: lib.rs  tests.rs
plankc/crates/plank-test-utils/: Cargo.toml
plankc/crates/plank-test-utils/src/: lib.rs
plankc/docs/: Frontend-Architecture.md  Grammar.md
plankc/examples/: erc20_v1.plk
plankc/examples/std/: prelude.plk
plankc/frontend/cli/: Cargo.toml
plankc/frontend/cli/src/: main.rs
plankc/frontend/cli/tests/: std_module.rs
plankc/frontend/diagnostics/: Cargo.toml
plankc/frontend/diagnostics/src/: lib.rs
plankc/frontend/driver/: Cargo.toml
plankc/frontend/driver/src/: lib.rs
plankc/frontend/hir/: Cargo.toml
plankc/frontend/hir-eval/: Cargo.toml
plankc/frontend/hir-eval/src/: buffers.rs  builtins.rs  comptime.rs  diagnostics.rs  evaluator.rs  functions.rs  lib.rs  local_state.rs  lower.rs  operators.rs  scope.rs  structs.rs  tests.rs  value.rs
plankc/frontend/hir-eval/src/functions/: cache.rs  mod.rs
plankc/frontend/hir-eval/src/tests/: basic.rs  calls.rs  comptime.rs  logical_ops.rs  mod.rs  operators.rs  structs.rs  types.rs
plankc/frontend/hir/src/: builtins.rs  diagnostics.rs  display.rs  lib.rs  operators.rs  tests.rs
plankc/frontend/hir/src/lowerer/: diagnostics.rs  mod.rs
plankc/frontend/mir/: Cargo.toml
plankc/frontend/mir-lower/: Cargo.toml
plankc/frontend/mir-lower/src/: builtins.rs  lib.rs  tests.rs
plankc/frontend/mir/src/: display.rs  lib.rs
plankc/frontend/parser/: Cargo.toml
plankc/frontend/parser/src/: const_print.rs  diagnostics.rs  error_report.rs  interner.rs  lexer.rs  lib.rs  module.rs  parser.rs  project.rs
plankc/frontend/parser/src/ast/: expr.rs  mod.rs
plankc/frontend/parser/src/cst/: display.rs  mod.rs
plankc/frontend/parser/src/parser/: errors.rs  mod.rs  token_items.rs
plankc/frontend/parser/src/tests/: errorless.rs  mod.rs  project.rs  resiliency.rs
plankc/frontend/session/: Cargo.toml
plankc/frontend/session/src/: builtins.rs  diagnostic.rs  lib.rs  poison.rs  types.rs
plankc/frontend/source/: Cargo.toml
plankc/frontend/source/src/: diagnostics.rs  lib.rs  module.rs  project.rs  tests.rs
plankc/frontend/values/: Cargo.toml
plankc/frontend/values/src/: bignum_interner.rs  builtins.rs  lib.rs  type_interner.rs  value_interner.rs
plankc/plank-diff-tests/src/examples/: ERC20.sol  MerkleAirdrop.sol  MinimalProxy.sol  Multisig.sol  erc20.plk  merkle_airdrop.plk  minimal_proxy.plk  multisig.plk
plankc/plank-diff-tests/src/std/: AbiDynamic.sol  AbiEncodePair.sol  AbiNestedStruct.sol  AbiStressTest.sol  StorageBytesTest.sol  abi_buf_fits_test.plk  abi_dynamic.plk  abi_encode_pair.plk  abi_nested_struct.plk  abi_stress_test.plk  storage_bytes_test.plk
plankc/plank-diff-tests/test/: BaseTest.sol
plankc/plank-diff-tests/test/examples/: ERC20.t.sol  MerkleAirdrop.t.sol  MinimalProxy.t.sol  Multisig.t.sol
plankc/plank-diff-tests/test/std/: AbiDynamic.t.sol  AbiEncodePair.t.sol  AbiNestedStruct.t.sol  AbiStressTest.t.sol  StorageBytesTest.t.sol
plankc/sir/crates/analyses/: Cargo.toml
plankc/sir/crates/analyses/src/: basic_block_ownership.rs  cfg_in_out_bundling.rs  legalizer.rs
plankc/sir/crates/assembler/: Cargo.toml
plankc/sir/crates/assembler/src/: display.rs  lib.rs  op.rs
plankc/sir/crates/cli/: Cargo.toml
plankc/sir/crates/cli/src/: main.rs
plankc/sir/crates/data/: Cargo.toml
plankc/sir/crates/data/src/: builder.rs  index.rs  lib.rs  view.rs
plankc/sir/crates/data/src/operation/: mod.rs  op_data.rs  op_visitor.rs
plankc/sir/crates/debug-backend/: Cargo.toml
plankc/sir/crates/debug-backend/src/: lib.rs  static_memory_layout.rs
plankc/sir/crates/optimizations/: Cargo.toml
plankc/sir/crates/optimizations/src/: constant_propagation.rs  copy_propagation.rs  defragmenter.rs  lib.rs  optimizer.rs  unused_operation_elimination.rs
plankc/sir/crates/parser/: Cargo.toml
plankc/sir/crates/parser/src/: emit.rs  lexer.rs  lib.rs  parser.rs
plankc/sir/crates/passes/: Cargo.toml
plankc/sir/crates/passes/src/: lib.rs
plankc/sir/crates/passes/src/analyses/: allocation_liveness.rs  basic_block_ownership.rs  cache.rs  cfg_in_out_bundling.rs  def_use.rs  dominators.rs  legalizer.rs  local_liveness.rs  mod.rs  predecessors.rs  reachability.rs  reverse_post_order.rs  traversal.rs
plankc/sir/crates/passes/src/optimizations/: constant_propagation.rs  copy_propagation.rs  defragmenter.rs  mod.rs  switch_lowering.rs  switch_peephole.rs  (+1 more)
plankc/sir/crates/transforms/: Cargo.toml
plankc/sir/crates/transforms/src/: ssa_transform.rs
plankc/sir/sir-solidity-diff-tests/src/: assembler_stress_test.sir  simple_malloc.sir
plankc/sir/sir-solidity-diff-tests/test/: AssemblerStressTest.t.sol  SimpleMalloc.t.sol
senseic/frontend/cli/: Cargo.toml
senseic/frontend/cli/src/: main.rs
senseic/frontend/hir/: Cargo.toml
senseic/frontend/hir/src/: builtins.rs  display.rs  lib.rs  tests.rs
senseic/frontend/mir-lower/: Cargo.toml
senseic/frontend/mir-lower/src/: lib.rs  tests.rs
senseic/frontend/parser/: Cargo.toml
senseic/frontend/parser/src/: builtin_names.rs  diagnostics.rs  error_report.rs  interner.rs  lib.rs  parser.rs  project.rs  source_fs.rs
senseic/frontend/parser/src/ast/: mod.rs
senseic/frontend/parser/src/cst/: mod.rs
senseic/frontend/parser/src/tests/: errorless.rs  mod.rs  resiliency.rs
senseic/sir/crates/analyses/: Cargo.toml
(+106 files in other folders)
