[package]
name = "plank"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-session.workspace = true
plank-parser.workspace = true
plank-source.workspace = true
plank-hir.workspace = true
plank-hir-eval.workspace = true
plank-mir.workspace = true
plank-mir-lower.workspace = true
plank-values.workspace = true
sir-debug-backend.workspace = true
sir-passes.workspace = true
clap.workspace = true
