[package]
name = "plank"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-driver.workspace = true
plank-session.workspace = true
plank-parser.workspace = true
plank-source.workspace = true
plank-hir.workspace = true
plank-mir.workspace = true
sir-passes.workspace = true
clap.workspace = true
anstream.workspace = true
owo-colors = "4.3.0"

[dev-dependencies]
tempfile.workspace = true
plank-test-utils.workspace = true
