[package]
name = "plank-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-session.workspace = true
plank-source.workspace = true
plank-hir.workspace = true
plank-hir-eval.workspace = true
plank-mir.workspace = true
plank-mir-lower.workspace = true
plank-values.workspace = true
sir-debug-backend.workspace = true
sir-passes.workspace = true
anstream.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
