[package]
name = "plank-hir-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-core.workspace = true
plank-evm.workspace = true
plank-session.workspace = true
plank-hir.workspace = true
plank-mir.workspace = true
plank-values.workspace = true

alloy-primitives.workspace = true
hashbrown.workspace = true

[dev-dependencies]
plank-test-utils.workspace = true
pretty_assertions.workspace = true
