[package]
name = "plank-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-core.workspace = true
plank-session.workspace = true
plank-parser.workspace = true
hashbrown.workspace = true

[dev-dependencies]
tempfile.workspace = true
