[package]
name = "plank-values"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-core.workspace = true
plank-session.workspace = true
hashbrown.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
enum-iterator.workspace = true
