[package]
name = "senseic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sensei-parser.workspace = true
sensei-hir.workspace = true
sensei-hir-eval.workspace = true
sensei-mir.workspace = true
sensei-mir-lower.workspace = true
sir-debug-backend.workspace = true
sir-optimizations.workspace = true
sir-analyses.workspace = true
sir-transforms.workspace = true
clap.workspace = true
