[package]
name = "sensei-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sensei-core.workspace = true
sensei-parser.workspace = true
sensei-values.workspace = true

hashbrown.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
sensei-test-utils.workspace = true
