[package]
name = "sensei-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sensei-core.workspace = true

# bumpalo = {workspace = true, features = ["allocator-api2", "collections"]}
allocator-api2.workspace = true
hashbrown.workspace = true
logos = "0.16.0"

[dev-dependencies]
pretty_assertions.workspace = true
sensei-test-utils.workspace = true
tempfile.workspace = true
