[package]
name = "sir-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
plank-core.workspace = true
thiserror.workspace = true
plank-test-utils.workspace = true
pretty_assertions.workspace = true
