[package]
name = "sir-optimizations"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sir-analyses.workspace = true
sir-data.workspace = true
plank-core.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
sir-parser.workspace = true
sir-test-utils = { path = "../../test-utils" }
