[package]
name = "sir-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
logos.workspace = true
chumsky.workspace = true
sir-data.workspace = true
sir-passes.workspace = true
bumpalo.workspace = true
alloy-primitives.workspace = true
smallvec.workspace = true

[dev-dependencies]
