[package]
name = "sir-passes"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sir-data.workspace = true
plank-core.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
alloy-primitives.workspace = true
bitflags.workspace = true

[dev-dependencies]
sir-parser.workspace = true
sir-test-utils = { path = "../../test-utils" }
