[package]
name = "sir-passes"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sir-data.workspace = true
plank-core.workspace = true
plank-evm.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
alloy-primitives.workspace = true
bitflags.workspace = true
smallvec.workspace = true

[dev-dependencies]
sir-parser.workspace = true
pretty_assertions.workspace = true
plank-test-utils.workspace = true
