[package]
name = "sir-analyses"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sir-data.workspace = true
sensei-core.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

[dev-dependencies]
sir-parser.workspace = true
alloy-primitives.workspace = true
